# phoenix-gpui-web-demo

./: .gitignore  README.md  mix.exs
assets/: Cargo.toml  Trunk.toml  index.html
assets/.cargo/: config.toml
assets/src/: app.rs  collaboration.rs  documents.rs  main.rs  text_offsets.rs  theme.rs
assets/src/ui/: cursor_layer.rs  editor_pane.rs  mod.rs  preview_pane.rs
assets/themes/: molokai.json
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: elixir_gpui.ex  elixir_gpui_web.ex
lib/elixir_gpui/: application.ex
lib/elixir_gpui/collaboration/: document_catalog.ex  room_server.ex
lib/elixir_gpui_web/: endpoint.ex  router.ex  telemetry.ex
lib/elixir_gpui_web/channels/: document_channel.ex  user_socket.ex
lib/elixir_gpui_web/controllers/: demo_controller.ex  error_json.ex  page_controller.ex
scripts/: ui-build.sh
test/elixir_gpui/collaboration/: room_server_test.exs
test/elixir_gpui_web/channels/: document_channel_test.exs
test/elixir_gpui_web/controllers/: demo_controller_test.exs  error_json_test.exs
test/support/: channel_case.ex  conn_case.ex
ui/: Cargo.toml  index.html
ui/src/: main.rs
