[package]
name = "elixir-gpui-web"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "elixir-gpui-web"
path = "src/main.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", version = "=0.2.2" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/refmdio/gpui-component", rev = "ecfd7d512d9688b9193437064b62daf8785baed0", default-features = false }
gpui-component-assets = { git = "https://github.com/refmdio/gpui-component", rev = "ecfd7d512d9688b9193437064b62daf8785baed0" }
serde_json = "1"
log = "0.4"
yrs = { version = "=0.25.0", features = ["sync"] }
base64 = "0.22"
futures = "0.3"
phoenix-channel-client = "0.1.1"
phoenix-channel-runtime = "0.1.1"
phoenix-channel-runtime-web = "0.1.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
js-sys = "=0.3.98"
web-sys = { version = "=0.3.98", features = ["Document", "Element", "Location", "Window"] }

[profile.dev]
debug = "limited"

[profile.release]
lto = "thin"
